--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="header_before_reg.css">
-        <link rel="stylesheet" href="header_before.css_reg">
+        <link rel="stylesheet" href="CSS/header/header_before_reg.css">
+        <link rel="stylesheet" href="CSS/header/header_after_reg.css">
+        <link rel="stylesheet" href="CSS/body/body.css">
         <title>Document</title>
     </head>
     <body>
