--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
         <link rel="stylesheet" href="CSS/header/header_before_reg.css">
         <link rel="stylesheet" href="CSS/header/header_after_reg.css">
         <link rel="stylesheet" href="CSS/body/body.css">
+        <link rel="stylesheet" href="CSS/header/container.css">
         <title>Document</title>
     </head>
     <body>
         <header>
-            <a href="#">О нас</a>
-            <a href="#">Услуги</a>
-            <a href="#">Вакансии</a>
-            <a href="#">Новости</a>
-            <a href="#">Соглашение</a>
-            <a href="#">Войти</a>
-            <a href="#">Зарегистрироваться</a>
+            <div class="container">
+                <a href="#">О нас</a>
+                <a href="#">Услуги</a>
+                <a href="#">Вакансии</a>
+                <a href="#">Новости</a>
+                <a href="#">Соглашение</a>
+                <a href="#">Войти</a>
+                <a href="#">Зарегистрироваться</a>
+            </div>
         </header>
         
     </body>
